# tutorials

./: .gitignore  AssignmentFive.java  AssignmentFour.java  AssignmentOne.java  AssignmentTwo.java  JavaScript_GroceryList.html  JavaScript_PasswordGenerator.html  README.md  package.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dependabot.yml
Css/css-traversy/: package.json  tailwind.config.cjs
Go/arrays-practice/: go.mod
Go/arrays-tut/: go.mod  lists.go
Go/benchmark/: go.mod  main_test.go
Go/bmi-calculator/: bmi.go
Go/concurrency-tut/: main.go
Go/control-tut/: go.mod
Go/embedding-tut/: go.mod  main.go  user1.txt
Go/follower-scan/: go.mod
Go/functions-tutorial/: functions.go
Go/intro-tutorial/: firstapp.go  go.mod
Go/loops-tut/: loops.go
Go/maps-tut/: maps.go
Go/more-functions/: main.go
Go/pointer-tut/: go.mod  pointers.go
Go/recruiter-scan/: .gitignore  go.mod  main.go
Go/scope-tut/: go.mod  types.go
Go/structs-practice/: go.mod
GoLang/arrays-practice/: practice.go
GoLang/arrays-tut/: lists.go
GoLang/benchmark/: main.go
GoLang/bmi-calculator/: bmi.go  go.mod  input.go
GoLang/concurrency-tut/: go.mod
Java/: AssignmentTwo.java  MergeSort.java  QuickSort.java
JavaScript/: IterateJSON.js  JavaScript_Converter.html
Node/: Fix-Error.bat
Python/: Text_Adventure.py
Rust/backend_test/: Cargo.toml
Rust/backend_test/src/: db.rs  main.rs
TypeScript/: actualMaps.js  actualMaps.ts  genericPredicate.js  genericPredicate.ts  isType.js  isType.ts  nestedBind.ts  sandbox.js  sandbox.ts  tsconfig.json
(+460 files in other folders)
