[package]
name = "backend_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features=["json"]}
chrono = {version = "0.4.26", features = ["serde"]}
diesel = {version = "2.1.0", features = ["mysql", "chrono"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"